--- a/src/renderer/style/style.scss
+++ b/src/renderer/style/style.scss
@@ -173,6 +173,8 @@ select {
             padding: calc(var(--pad)/2);
             border-radius: var(--border-radius);
             gap: calc(var(--pad)/2);
+            height: 50vh;
+            overflow: scroll;
         }
 
         li {
